--- a/themes/digitalgarden/layouts/portfolio/list.html
+++ b/themes/digitalgarden/layouts/portfolio/list.html
@@ -27,10 +27,10 @@
         {{ end }}
         <p
           class="underline decoration-slate-500 text-slate-500 underline-offset-8 font-medium mt-2 hover:text-slate-800 hover:decoration-slate-800 dark:hover:text-slate-400 dark:hover:decoration-slate-400">
-          View Project →</p>
+          Više →</p>
       </a>
       {{ if and (eq $index 0) $description }}
-      
+
       {{ end }}
       {{ end -}}
     </div>
