--- a/themes/digitalgarden/layouts/portfolio/single.html
+++ b/themes/digitalgarden/layouts/portfolio/single.html
@@ -4,10 +4,13 @@
 {{$Section := .Site.GetPage "section" .Section }}
 
 <div class="flex max-h-screen relative overflow-y-auto h-full w-full">
-  
+
   <article class="px-6 py-20 w-full mx-auto prose lg:prose-lg dark:prose-invert h-fit prose-img:mx-auto">
-    
-    <a href="{{ $Section.Permalink }}" class="!no-underline !text-slate-500 !mb-2 !inline-block !font-normal !text-sm hover:!text-slate-700 dark:hover:!text-slate-400">← Back to list</a>
+
+    <a href="{{ $Section.Permalink }}"
+      class="!no-underline !text-slate-500 !mb-2 !inline-block !font-normal !text-sm hover:!text-slate-700 dark:hover:!text-slate-400">
+      ← Znimljivosti
+    </a>
 
     {{ $title := .Params.title }}
     <h1 class="!mb-2">{{ $title }}</h1>
