lex, https in 404

--- a/themes/digitalgarden/layouts/portfolio/single.html
+++ b/themes/digitalgarden/layouts/portfolio/single.html
@@ -9,7 +9,7 @@
 
     <a href="{{ $Section.Permalink }}"
       class="!no-underline !text-slate-500 !mb-2 !inline-block !font-normal !text-sm hover:!text-slate-700 dark:hover:!text-slate-400">
-      ← Znimljivosti
+      ← Zanimljivosti
     </a>
 
     {{ $title := .Params.title }}
