--- a/themes/digitalgarden/layouts/partials/head.html
+++ b/themes/digitalgarden/layouts/partials/head.html
@@ -6,6 +6,8 @@
 
   <link rel="icon" href="{{ if (isset .Site.Params "favicon") }}{{ .Site.Params.favicon }}{{ else }}/favicon.ico{{ end }}">
 
+  {{ partial "google/ads" . }}
+
   <title>
     {{ block "title" . }} {{- .Title }} - {{ .Site.Title -}} {{ end }}
   </title>
