--- a/static/css/table_form.css
+++ b/static/css/table_form.css
@@ -39,6 +39,7 @@ label {
 }
 
 input[type="text"] {
+    color: black;
     width: 100%;
     padding: 0.75rem 1rem;
     border: 1px solid #ccc;
@@ -48,6 +49,7 @@ input[type="text"] {
 }
 
 input[type="text"]:focus {
+    color: black;
     outline: none;
     border-color: #0077cc;
     box-shadow: 0 0 0 2px rgba(0, 119, 204, 0.1);
